# do-FANN

./: .gitignore  AGENTS.md  CODEBASE_ANALYSIS_IMPROVEMENTS.md  Cargo.toml  OPENCODE_README.md  README.md  TODO.txt  comprehensive_test_report.md  crates.js  final_optimization_report.md  fix-formatting.sh  fix-security-issues.sh  help.html  opencode copy.json  opencode-init.sh  opencode.json  package-lock.json  package.json  search-index.js  settings.html  src-files.js
.github/workflows/: README.md  code-quality.yml  cuda-wasm-ci.yml  docker-ci.yml  integration-testing.yml  neuro-divergent-ci.yml  opencv-rust-ci.yml  performance-monitoring.yml  production-deployment.yml  security-compliance.yml  unified-release.yml
.opencode/: README.md
.opencode/agent/: README.txt  VALIDATION_SYSTEM_SUMMARY.md  VALIDATION_WORKFLOW_README.md  agent-controller.md  ci-cd-operations.md  code-linting.md  codebase-cleaner.md  codebase-consolidator.md  codebase-modernizer.md  command-verifier.md  cv-engineer.md  docs-specialist.md  error-handling.md  event-driven-development.md  event-handler.md  git-commit-merge.md  github-operations.md  implementation-verifier.md  issue-tracking.md  logging.md  memory-leak-prevention.md  memory-management.md  merge-strategy.md  message-verification.md  ml-researcher.md  monitoring-observability.md  opencode-agent-creator.md  orchestrator.md  output-validator.md  performance-optimizer.md  pull-request-management.md  rust-core.md  security-audit.md  sparc-architecture.md  sparc-code.md  sparc-pseudocode.md  sparc-refinement.md  sparc-specification.md  swarm-architect.md  test-engineer.md  (+3 more)
cuda-wasm/: .eslintrc.js  package-lock.json  package.json
do-swarm/: Cargo.toml
do-swarm/crates/do-swarm-wasm-unified/: Cargo.toml
do_fann/: all.html  enum.TrainingAlgorithm.html  index.html  macro.cascade_error.html  macro.network_error.html  macro.training_error.html
docs/: RUV_SWARM_PERFORMANCE_RESEARCH_REPORT.md
examples/: cuda_wasm_neural_integration.rs  gpu_training_test.rs  test_gpu_detection.rs
neuro-divergent/: Cargo.toml
opencv-rust/: Cargo.toml
ruv-swarm/: Cargo.toml
ruv-swarm/crates/do-swarm-agents/: Cargo.toml
scripts/: security-audit.sh  setup-build-environment.sh
src/: errors.rs  lib.rs  memory_manager.rs  wasm_performance.rs
src/simd/: mod.rs
(+762 files in other folders)
