[package]
name = "do-swarm-wasm-unified"
version = "1.0.5"
edition = "2021"
authors = ["do-FANN Contributors"]
description = "Unified WASM module exposing all do-FANN ecosystem capabilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/d-oit/do-FANN"
keywords = ["wasm", "neural-network", "swarm", "do-fann", "forecasting"]
categories = ["wasm", "science", "algorithms", "mathematics", "concurrency"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["alloc"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = { version = "0.4", optional = true }
rayon = { version = "1.8", optional = true }
lazy_static = "1.4"

# Internal crate dependencies with WASM features
do-swarm-core = { path = "../do-swarm-core", features = ["wasm"], default-features = false }
do-swarm-ml = { path = "../do-swarm-ml", features = ["wasm"], default-features = false }
do-swarm-wasm = { path = "../do-swarm-wasm", default-features = false }
do-swarm-persistence = { path = "../do-swarm-persistence", default-features = false }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "WorkerGlobalScope",
  "DedicatedWorkerGlobalScope",
  "Navigator",
  "Window",
]

# WASM optimization features
[features]
default = ["simd", "parallel", "optimize"]
simd = []
parallel = ["rayon"]
optimize = []
wee_alloc_feature = ["wee_alloc"]
console_error_panic_hook = []
do-fann = []
neuro-divergent = []

# WASM-specific optimizations
[package.metadata.wasm-pack]
"wasm-pack-plugin" = "wasm-pack-plugin"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-simd"]