[package]
name = "do-swarm-agents"
version = "1.0.5"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Specialized AI agents for do-FANN Swarm"

[dependencies]
do-swarm-core = { path = "../do-swarm-core", version = "1.0.6" }